--- a/MovieInfoApp/index.html
+++ b/MovieInfoApp/index.html
@@ -28,7 +28,8 @@
     <div class="container">
       <div id="movies" class="row"></div>
     </div>
-
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="/js/main.js"></script>
   </body>
 </html>
