html layout adjustments

--- a/GitHubFinderApp/index.html
+++ b/GitHubFinderApp/index.html
@@ -32,7 +32,15 @@
        </nav>
 
 <div class="container">
+  <div class="searchContainer">
+    <h1>Search GitHub User</h1>
+    <p class="lead">Enter a username to fetch a users profile info and repos</p>
+    <input type="text" id="searchUser" class="form-control" placeholder="GitHub Username...">
+  </div>
+  <br>
+  <div id="profile">
 
+  </div><!--/.container -->
 </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
