--- a/BookmarkerApp/index.html
+++ b/BookmarkerApp/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-  <body>
+  <body onload="fetchBookmarks()">
 
     <div class="container">
       <div class="header clearfix">
@@ -36,7 +36,7 @@
 
       <div class="row marketing">
         <div class="col-lg-12">
-          <div id="bookmarksResult"></div>
+          <div id="bookmarksResults"></div>
         </div>
       </div>
 
