--- a/RestaurantPickerWebApp/index.html
+++ b/RestaurantPickerWebApp/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
-    <title></title>
+    <meta charset="UTF-8">
+    <title>Restaurant Picker</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="stylesheet" href="jquery.mobile.structure-1.0.1.CSS" />
+    <link rel="stylesheet" href="jquery.mobile-1.0.1.CSS" />
+    <script src="https://www.noupe.comjs/jquery-1.7.1.min.js"></script>
+    <script src="https://www.noupe.comjs/jquery.mobile-1.0.1.min.js"></script>
   </head>
   <body>
 
