--- a/RestaurantPickerWebApp/index.html
+++ b/RestaurantPickerWebApp/index.html
@@ -11,6 +11,26 @@
     <script src="https://www.noupe.comjs/jquery.mobile-1.0.1.min.js"></script>
   </head>
   <body>
+<div data-role="page" id="home" data-theme="c">
+  <div data-role="content">
+<div id="branding">
+<h1>Restaurant Picker</h1>
+</div>
+<div class="choice_list">
+  <h1> What would you'd like to eat? </h1>
+  <h1> What would you'd like to eat? </h1>
 
+  <ul data-role="listview" data-inset="true" >
+    <li><a href="choose_town.HTML" data-transition="slidedown"> <img src="https://www.noupe.comsushis.jpg"/> <h3> Some Sushis</h3></a></li>
+    <li><a href="choose_town.HTML" data-transition="slidedown"> <img src="https://www.noupe.compizza.jpg"/> <h3> A Pizza </h3></a></li>
+    <li><a href="choose_town.HTML" data-transition="slidedown"> <img src="https://www.noupe.comkebap.jpg"/> <h3> A Kebap</h3></a></li>
+    <li><a href="choose_town.HTML" data-transition="slidedown"> <img src="https://www.noupe.comburger.jpg"/> <h3> A Burger</h3></a></li>
+    <li><a href="choose_town.HTML" data-transition="slidedown"> <img src="https://www.noupe.comnems.jpg"/> <h3> Some Nems </h3></a></li>
+    <li><a href="choose_town.HTML" data-transition="slidedown"> <img src="https://www.noupe.comtradi.jpg"/> <h3> Something more traditional</h3></a></li>
+  </ul>
+  </div>
+  </div>
+  </div>
+</div><!-- /page -->
   </body>
 </html>
