--- a/RestaurantPickerWebApp/choose_town.html
+++ b/RestaurantPickerWebApp/choose_town.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <title>Restaurant Picker</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <link rel="stylesheet" href="jquery.mobile.structure-1.0.1.CSS" />
-    <link rel="stylesheet" href="jquery.mobile-1.0.1.CSS" />
-    <script src="https://www.noupe.comjs/jquery-1.7.1.min.js"></script>
-    <script src="https://www.noupe.comjs/jquery.mobile-1.0.1.min.js"></script>
-  </head>
+  	<link rel="stylesheet" href="jquery.mobile.structure-1.0.1.css" />
+  	<link rel="apple-touch-icon" href="images/launch_icon_57.png" />
+  	<link rel="apple-touch-icon" sizes="72x72" href="images/launch_icon_72.png" />
+  	<link rel="apple-touch-icon" sizes="114x114" href="images/launch_icon_114.png" />
+  	<link rel="stylesheet" href="jquery.mobile-1.0.1.css" />
+  	<link rel="stylesheet" href="custom.css" />
+  	<script src="js/jquery-1.7.1.min.js"></script>
+  	<script src="js/jquery.mobile-1.0.1.min.js"></script>
+</head>
   <body>
   <div id="choisir_ville" data-role="page" data-add-back-btn="true">
     <div data-role="header">
