--- a/Survey-Form/index.html
+++ b/Survey-Form/index.html
@@ -62,5 +62,6 @@
     </form>
   </div>
     <script type="text/javascript" src="app.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   </body>
 </html>
