--- a/ProductLandingPage/index.html
+++ b/ProductLandingPage/index.html
@@ -8,9 +8,12 @@
   <body>
     <header>
       <nav class="navbar navbar-default navbar-fixed-top">
-      <div class="container">
-  
-      </div>
+    <ul>
+      <li><a class="nav-link" href="#features">What's new</a></li>
+      <li><a class="nav-link" href="#learn-and-support">Learn and Support</a></li>
+      <li><a class="nav-link" href="#freetrial">Free Trial</a></li>
+      <li><a class="nav-link" href="#pricing">Pricing</a></li>
+   </ul>
     </nav>
     </header>
   
