--- a/ProductLandingPage/index.html
+++ b/ProductLandingPage/index.html
@@ -4,17 +4,51 @@
     <meta charset="utf-8">
     <title>Adobe Photoshop CC</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-default navbar-fixed-top">
-    <ul>
-      <li><a class="nav-link" href="#features">What's new</a></li>
-      <li><a class="nav-link" href="#learn-and-support">Learn and Support</a></li>
-      <li><a class="nav-link" href="#freetrial">Free Trial</a></li>
-      <li><a class="nav-link" href="#pricing">Pricing</a></li>
-   </ul>
-    </nav>
+      <div class="navbar navbar-expand-md navbar-dark bg-dark mb-4" role="navigation">
+      <a class="navbar-brand" href="#">Photoshop</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarCollapse">
+          <ul class="navbar-nav mr-auto">
+              <li class="nav-item active">
+                  <a class="nav-link" href="#">What's new<span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="http://fontenele.github.io/bootstrap-navbar-dropdowns/" target="_blank">Github</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link disabled" href="#">Disabled</a>
+              </li>
+              <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" id="dropdown1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown1</a>
+                  <ul class="dropdown-menu" aria-labelledby="dropdown1">
+                      <li class="dropdown-item" href="#"><a>Action 1</a></li>
+                      <li class="dropdown-item dropdown">
+                          <a class="dropdown-toggle" id="dropdown1-1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown1.1</a>
+                          <ul class="dropdown-menu" aria-labelledby="dropdown1-1">
+                              <li class="dropdown-item" href="#"><a>Action 1.1</a></li>
+                              <li class="dropdown-item dropdown">
+                                  <a class="dropdown-toggle" id="dropdown1-1-1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown1.1.1</a>
+                                  <ul class="dropdown-menu" aria-labelledby="dropdown1-1-1">
+                                      <li class="dropdown-item" href="#"><a>Action 1.1.1</a></li>
+                                  </ul>
+                              </li>
+                          </ul>
+                      </li>
+                  </ul>
+              </li>
+          </ul>
+          <form class="form-inline mt-2 mt-md-0">
+              <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+          </form>
+      </div>
+  </div>
     </header>
   
     <div class="container">
