--- a/ProductLandingPage/index.html
+++ b/ProductLandingPage/index.html
@@ -9,6 +9,7 @@
   <body>
     <header>
       <div class="navbar navbar-expand-md navbar-dark bg-dark mb-4" role="navigation">
+        <img src="photoshop_icon.svg" alt="Photoshop icon" id="photoshop">
       <a class="navbar-brand" href="#">Photoshop</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -19,30 +20,20 @@
                   <a class="nav-link" href="#">What's new<span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="http://fontenele.github.io/bootstrap-navbar-dropdowns/" target="_blank">Github</a>
+                  <a class="nav-link" href="http://fontenele.github.io/bootstrap-navbar-dropdowns/" target="_blank">Learn & Support</a>
               </li>
               <li class="nav-item">
                   <a class="nav-link disabled" href="#">Disabled</a>
               </li>
               <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" id="dropdown1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown1</a>
+                  <a class="nav-link dropdown-toggle" id="dropdown1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pricing</a>
                   <ul class="dropdown-menu" aria-labelledby="dropdown1">
-                      <li class="dropdown-item" href="#"><a>Action 1</a></li>
-                      <li class="dropdown-item dropdown">
-                          <a class="dropdown-toggle" id="dropdown1-1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown1.1</a>
-                          <ul class="dropdown-menu" aria-labelledby="dropdown1-1">
-                              <li class="dropdown-item" href="#"><a>Action 1.1</a></li>
-                              <li class="dropdown-item dropdown">
-                                  <a class="dropdown-toggle" id="dropdown1-1-1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown1.1.1</a>
-                                  <ul class="dropdown-menu" aria-labelledby="dropdown1-1-1">
-                                      <li class="dropdown-item" href="#"><a>Action 1.1.1</a></li>
-                                  </ul>
-                              </li>
+                      <li class="dropdown-item" href="#"><a>Basic1</a></li>
+                              <li class="dropdown-item" href="#"><a>Premium</a></li>
+
                           </ul>
                       </li>
                   </ul>
-              </li>
-          </ul>
           <form class="form-inline mt-2 mt-md-0">
               <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
               <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
