--- a/ProductLandingPage/index.html
+++ b/ProductLandingPage/index.html
@@ -49,7 +49,7 @@
         <div class="tiles-pars">
           <div class="tile-container">
             <a href="https://helpx.adobe.com/photoshop/get-started.html?promoid=VPM4KCNL&mv=other">
-            <div class="get-started-icon"></div>
+            <div id="get-started-icon"></div>
             <div class="details">
               <h3>Get Started</h3>
             </div>
@@ -73,46 +73,47 @@
         </div>
   </section>
 
-<section id="how-it-works">
-  <iframe id="video" height="315" src="https://www.youtube-nocookie.com/embed/y8Yv4pnO7qc?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+<section id="beginners">
+  <iframe id="video" height="315" src="https://www.youtube.com/watch?v=pFyOznL9UvA" frameborder="0" allowfullscreen></iframe>
 </section>
 <section id="pricing">
   <div id="tenor">
     <div class="level">
-      Tenor Trombone
+      Adobe Photoshop CC Single App
     </div>
-    <h2>$600</h2>
+    <h2>$20.99</h2>
     <ol>
-      <li>Lorem ipsum.</li>
-      <li>Lorem ipsum.</li>
-      <li>Lorem ipsum dolor.</li>
-      <li>Lorem ipsum.</li>
+      <li>Get Photoshop as part of Creative Cloud for just US$20.99/mo.</li>
     </ol>
     <button class="btn">Select</button>
   </div>
   <div id="bass">
     <div class="level">
-      Bass Trombone
+      Photography plan
     </div>
-    <h2>$900</h2>
+    <h2>$9.99</h2>
     <ol>
-      <li>Lorem ipsum.</li>
-      <li>Lorem ipsum.</li>
-      <li>Lorem ipsum dolor.</li>
-      <li>Lorem ipsum.</li>
+      <li>Includes Lightroom CC, 20GB of cloud storage, Lightroom Classic CC, and Photoshop CC.</li>
     </ol>
     <button class="btn">Select</button>
   </div>
   <div id="valve">
     <div class="level">
-      Valve Trombone
+      Students and teachers
     </div>
-    <h2>$1200</h2>
+    <h2>$19.99</h2>
     <ol>
-      <li>Plays similar to a Trumpet</li>
-      <li>Great for Jazz Bands</li>
-      <li>Lorem ipsum dolor.</li>
-      <li>Lorem ipsum.</li>
+      <li>Save over 60% on the entire collection of Creative Cloud apps. </li>
+    </ol>
+    <button class="btn">Select</button>
+  </div>
+  <div id="valve">
+    <div class="level">
+      Creative Cloud All Apps
+    </div>
+    <h2>$52.99</h2>
+    <ol>
+      <li>Get Photoshop and the entire collection of creative app</li>
     </ol>
     <button class="btn">Select</button>
   </div>
@@ -123,6 +124,7 @@
     <li><a href="#">Terms</a></li>
     <li><a href="#">Contact</a></li>
   </ul>
+  
  <div>Icons made by <a href="https://www.freepik.com/" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" 			    title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" 			    title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
   <span>Copyright 2016, Original Trombones</span>
   </footer>
