add an action to the form

--- a/ProductLandingPage/index.html
+++ b/ProductLandingPage/index.html
@@ -39,7 +39,7 @@
       <section id="newsroom">
         <h2>Newsroom - Latest news</h2>
         <p>Become a part from our community just by entering your email</p>
-        <form id="form">
+        <form id="form" action="https://www.freecodecamp.com/email-submit">
           <input name="email" id="email" type="email" placeholder="Enter your email" required/>
           <input id="submit" type="submit" value="Get Started" class="btn"></input>
         </form>
