--- a/ProductLandingPage/index.html
+++ b/ProductLandingPage/index.html
@@ -10,7 +10,7 @@
     <header id="header">
       <div class="navbar navbar-expand-md navbar-dark bg-dark mb-4" role="navigation">
         <img src="photoshop_icon.svg" alt="Photoshop icon" id="photoshop">
-      <a class="navbar-brand" href="#">Photoshop</a>
+      <a class="nav-link navbar-brand" href="#">Photoshop</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
       </button>
@@ -47,34 +47,50 @@
       
       <section id="tutorials">
         <div class="tiles-pars">
-          <div class="tile-container">
+          <div class="tile-out-container">
+            <div class="tile-container">
             <a href="https://helpx.adobe.com/photoshop/get-started.html?promoid=VPM4KCNL&mv=other">
-            <div id="get-started-icon"></div>
+            <div class="icon"><div id="get-started-icon"></div></div>
             <div class="details">
               <h3>Get Started</h3>
             </div>
             </a>
-          </div>
-          <div class="desc">
-            <h2>Get started</h2>
-          </div>
-          <div class="icon">
-            <i class="fa fa-3x fa-truck"></i>
-          </div>
-          <div class="desc">
-            <h2>Tutorials</h2>
-          </div>
-          <div class="icon">
-            <i class="fa fa-3x fa-battery-full" aria-hidden="true"></i>
-          </div>
-          <div class="desc">
-            <h2>User guide</h2>
+            </div>
           </div>
         </div>
+        <div class="tiles-pars">
+          <div class="tile-out-container">
+          <div class="tile-container">
+            <a href="https://helpx.adobe.com/photoshop/get-started.html?promoid=VPM4KCNL&mv=other">
+            <div class="icon"><div id="get-started-icon"></div></div>
+            <div class="details">
+              <h3>Tutorials</h3>
+            </div>
+            </a>
+          </div>
+          </div>
+        </div>
+        <div class="tiles-pars">
+          <div class="tile-out-container">
+          <div class="tile-container">
+            <a href="https://helpx.adobe.com/photoshop/get-started.html?promoid=VPM4KCNL&mv=other">
+            <div class="icon"><div id="get-started-icon"></div></div>
+            <div class="details">
+              <h3>User-Guide</h3>
+            </div>
+            </a>
+          </div>
+        </div>
+      </div>
+      </div>
   </section>
 
 <section id="beginners">
-  <iframe id="video" height="315" src="https://www.youtube.com/watch?v=pFyOznL9UvA" frameborder="0" allowfullscreen></iframe>
+  <video id="video" width="320" height="240" controls>
+  <source src="https://helpx.adobe.com/photoshop/how-to/video-editing.html" type="video/mp4">
+  <source src="https://helpx.adobe.com/photoshop/how-to/video-editing.html" type="video/ogg">
+  Your browser does not support the video tag.
+  </video>
 </section>
 <section id="pricing">
   <div id="tenor">
