add more icons and layout, updated the style

--- a/ProductLandingPage/index.html
+++ b/ProductLandingPage/index.html
@@ -62,7 +62,7 @@
           <div class="tile-out-container">
           <div class="tile-container">
             <a href="https://helpx.adobe.com/photoshop/get-started.html?promoid=VPM4KCNL&mv=other">
-            <div class="icon"><div id="get-started-icon"></div></div>
+            <div class="icon"><div id="tutorial"></div></div>
             <div class="details">
               <h3>Tutorials</h3>
             </div>
@@ -74,7 +74,7 @@
           <div class="tile-out-container">
           <div class="tile-container">
             <a href="https://helpx.adobe.com/photoshop/get-started.html?promoid=VPM4KCNL&mv=other">
-            <div class="icon"><div id="get-started-icon"></div></div>
+            <div class="icon"><div id="user-guide-book"></div></div>
             <div class="details">
               <h3>User-Guide</h3>
             </div>
@@ -82,58 +82,59 @@
           </div>
         </div>
       </div>
-      </div>
   </section>
 
 <section id="beginners">
-  <video id="video" width="320" height="240" controls>
+  <video id="video" width="500" height="240" controls allowfullscreen>
   <source src="https://helpx.adobe.com/photoshop/how-to/video-editing.html" type="video/mp4">
   <source src="https://helpx.adobe.com/photoshop/how-to/video-editing.html" type="video/ogg">
   Your browser does not support the video tag.
   </video>
 </section>
+
 <section id="pricing">
-  <div id="tenor">
-    <div class="level">
+  <div id="single">
+    <div class="desc">
       Adobe Photoshop CC Single App
     </div>
     <h2>$20.99</h2>
     <ol>
       <li>Get Photoshop as part of Creative Cloud for just US$20.99/mo.</li>
     </ol>
-    <button class="btn">Select</button>
+    <button class="btn select">Select</button>
   </div>
-  <div id="bass">
-    <div class="level">
+  <div id="photography">
+    <div class="desc">
       Photography plan
     </div>
     <h2>$9.99</h2>
     <ol>
       <li>Includes Lightroom CC, 20GB of cloud storage, Lightroom Classic CC, and Photoshop CC.</li>
     </ol>
-    <button class="btn">Select</button>
+    <button class="btn select">Select</button>
   </div>
-  <div id="valve">
-    <div class="level">
+  <div id="uni">
+    <div class="desc">
       Students and teachers
     </div>
     <h2>$19.99</h2>
     <ol>
       <li>Save over 60% on the entire collection of Creative Cloud apps. </li>
     </ol>
-    <button class="btn">Select</button>
+    <button class="btn select">Select</button>
   </div>
-  <div id="valve">
-    <div class="level">
+  <div id="creative-cloud">
+    <div class="desc">
       Creative Cloud All Apps
     </div>
     <h2>$52.99</h2>
     <ol>
       <li>Get Photoshop and the entire collection of creative app</li>
     </ol>
-    <button class="btn">Select</button>
+    <button class="btn select">Select</button>
   </div>
 </section>
+
 <footer>
   <ul>
     <li><a href="#">Privacy</a></li>
@@ -145,6 +146,7 @@
   <span>Copyright 2016, Original Trombones</span>
   </footer>
     </div>
+    
     <script type="text/javascript" src="app.js"></script>
   </body>
 </html>
