add an react icon, border removed

--- a/TechnicalDocumentationPage/index.html
+++ b/TechnicalDocumentationPage/index.html
@@ -8,7 +8,7 @@
   <body>
     
 <nav id="navbar">
-  <header>React Documentation</header>
+  <header><img src="react.svg" alt="react-icon" height="25">React Documentation</header>
   <ul> 
     <a class="nav-link" href="#getting-started" rel="internal"><li>Getting Started</li></a>
     <a class="nav-link" href="#cdn-link" rel="internal"><li>CDN Links</li></a>
