add styling, navbar and project

--- a/PersonalPortfolioWebpage/index.html
+++ b/PersonalPortfolioWebpage/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <header>
@@ -13,8 +13,22 @@
           <li><a href="#projects">My Work</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
+        <div id="welcome-section">
+          <h1>Hey. Glad you are here!</h1>
+          <p>Keep scrolling for a little about me...</p>
+        </div>
       </nav>
     </header>
+    <div id="projects" class="work">
+      <h2 class="work-header">My project</h2>
+      <a href="https://codepen.io/kafadarova/pen/XzxRpe" target="_blank" class="project project-tile">
+        <img class="project-pic" src="weather.jpg" alt="project">
+        <div class="project-title">Local Weather App</div>
+    </a>
+
+
+  <a href="https://codepen.io/kafadarova/" class="show-all" target="_blank">Show all</a>
+  </div>
     
     <script type="text/javascript" src="script.js"></script>
   </body>
