--- a/PersonalPortfolioWebpage/index.html
+++ b/PersonalPortfolioWebpage/index.html
@@ -24,6 +24,18 @@
       <a href="https://codepen.io/kafadarova/pen/XzxRpe" target="_blank" class="project project-tile">
         <img class="project-pic" src="weather.jpg" alt="project">
         <div class="project-title">Local Weather App</div>
+      </a>
+      <a href="https://codepen.io/kafadarova/pen/omqqOm" target="_blank" class="project project-tile">
+        <img class="project-pic" src="weather.jpg" alt="project">
+        <div class="project-title">Product Landing Page</div>
+    </a>
+    <a href="https://codepen.io/kafadarova/pen/mvKzqR" target="_blank" class="project project-tile">
+      <img class="project-pic" src="weather.jpg" alt="project">
+      <div class="project-title">Technical Documentation Page</div>
+    </a>
+    <a href="https://codepen.io/kafadarova/pen/rYYeRp" target="_blank" class="project project-tile">
+      <img class="project-pic" src="weather.jpg" alt="project">
+      <div class="project-title">Tribute Page - Nelson Mandela</div>
     </a>
 
 
