add a contact section and images for the projects

--- a/PersonalPortfolioWebpage/index.html
+++ b/PersonalPortfolioWebpage/index.html
@@ -22,24 +22,33 @@
     <div id="projects" class="work">
       <h2 class="work-header">My project</h2>
       <a href="https://codepen.io/kafadarova/pen/XzxRpe" target="_blank" class="project project-tile">
-        <img class="project-pic" src="weather.jpg" alt="project">
+        <img class="project-pic" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRXkRYqBdLTx6S5LTMryqPQikqsUvuwh5UYy1sjU9aUvgG83wgN" alt="project">
         <div class="project-title">Local Weather App</div>
       </a>
       <a href="https://codepen.io/kafadarova/pen/omqqOm" target="_blank" class="project project-tile">
-        <img class="project-pic" src="weather.jpg" alt="project">
+        <img class="project-pic" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT60QmriXGMIn2JtfrtsDMbMIwH6JHwREaZu4zggo6YsF6FA3Bi" alt="project">
         <div class="project-title">Product Landing Page</div>
     </a>
     <a href="https://codepen.io/kafadarova/pen/mvKzqR" target="_blank" class="project project-tile">
-      <img class="project-pic" src="weather.jpg" alt="project">
+      <img class="project-pic" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSTCZJlZ23E_w31i530nN1lBqqiTbzEoXYM3tjZ-pSPtceRw3z6" alt="project">
       <div class="project-title">Technical Documentation Page</div>
     </a>
     <a href="https://codepen.io/kafadarova/pen/rYYeRp" target="_blank" class="project project-tile">
-      <img class="project-pic" src="weather.jpg" alt="project">
+      <img class="project-pic" src="https://www.sahistory.org.za/sites/default/files/article_image/nelson-mandela_650_330_70_s.jpg" alt="project">
       <div class="project-title">Tribute Page - Nelson Mandela</div>
     </a>
 
 
   <a href="https://codepen.io/kafadarova/" class="show-all" target="_blank">Show all</a>
+  </div>
+  
+  <div id="contact">
+    <div class="header">
+      <h1>Let's collaborate</h1>
+  </div>
+  <a id='profile-link' href="https://github.com/kafadarova" target="_blank" class="details">
+   <img id="github" src="http://cdn.onlinewebfonts.com/svg/img_326384.png" alt="github-logo">
+   </a>
   </div>
     
     <script type="text/javascript" src="script.js"></script>
